LanguageSupport Ankhbot Theme

--- a/Overlay - Giveaway/Overlays/AnkhBot/index.html
+++ b/Overlay - Giveaway/Overlays/AnkhBot/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="libs/animate.min.css">
     <script src="../userSettings.js"></script>
     <script src="../../Data/languages.js"></script>
+    <script src="../../GiveawayConfig.js"></script>
     <script src="../../API_Key.js"></script>
     <script src="libs/jquery.min.js"></script>
     <script src="libs/TweenMax.min.js"></script>
